{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 18,
  "lineage": "36fc4365-fc6a-31b8-a53b-470111c8c4a2",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09480707ee7530efe",
            "domain": "vpc",
            "id": "eipalloc-09480707ee7530efe",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-209-215-145.compute-1.amazonaws.com",
            "public_ip": "18.209.215.145",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061219285921:internet-gateway/igw-0bd4727d972c3be64",
            "id": "igw-0bd4727d972c3be64",
            "owner_id": "061219285921",
            "tags": {
              "Name": "my-vpc-internet-gateway"
            },
            "tags_all": {
              "Name": "my-vpc-internet-gateway"
            },
            "vpc_id": "vpc-060a5696cbf33b243"
          },
          "dependencies": [
            "module.network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09480707ee7530efe",
            "association_id": "eipassoc-06550f9d0715c12ac",
            "connectivity_type": "public",
            "id": "nat-0f5e10384fb975206",
            "network_interface_id": "eni-08bf3537bf783bbc5",
            "private_ip": "10.0.3.223",
            "public_ip": "18.209.215.145",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b741dcb5dd71765e",
            "tags": {
              "Name": "my-vpc-nat-gateway"
            },
            "tags_all": {
              "Name": "my-vpc-nat-gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.my_eip",
            "module.network.aws_subnet.my_private_subnet",
            "module.network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061219285921:route-table/rtb-0a0dc43844709af49",
            "id": "rtb-0a0dc43844709af49",
            "owner_id": "061219285921",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f5e10384fb975206",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-private-route-table"
            },
            "tags_all": {
              "Name": "my-vpc-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-060a5696cbf33b243"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.my_eip",
            "module.network.aws_nat_gateway.my_nat_gateway",
            "module.network.aws_subnet.my_private_subnet",
            "module.network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061219285921:route-table/rtb-0f1fa96be7faa7acd",
            "id": "rtb-0f1fa96be7faa7acd",
            "owner_id": "061219285921",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd4727d972c3be64",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-public-route-table"
            },
            "tags_all": {
              "Name": "my-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-060a5696cbf33b243"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.my_internet_gateway",
            "module.network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0639c886f522c8438",
            "route_table_id": "rtb-0a0dc43844709af49",
            "subnet_id": "subnet-0b741dcb5dd71765e"
          },
          "dependencies": [
            "module.network.aws_eip.my_eip",
            "module.network.aws_nat_gateway.my_nat_gateway",
            "module.network.aws_route_table.my_private_route_table",
            "module.network.aws_subnet.my_private_subnet",
            "module.network.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0940773f2e2dad885",
            "route_table_id": "rtb-0a0dc43844709af49",
            "subnet_id": "subnet-001964dc7cfba3c40"
          },
          "dependencies": [
            "module.network.aws_eip.my_eip",
            "module.network.aws_nat_gateway.my_nat_gateway",
            "module.network.aws_route_table.my_private_route_table",
            "module.network.aws_subnet.my_private_subnet",
            "module.network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0389798ea09376ef2",
            "route_table_id": "rtb-0f1fa96be7faa7acd",
            "subnet_id": "subnet-001344a47e0e6fd75"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.my_internet_gateway",
            "module.network.aws_route_table.my_public_route_table",
            "module.network.aws_subnet.my_public_subnet",
            "module.network.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03db6984ea518b36a",
            "route_table_id": "rtb-0f1fa96be7faa7acd",
            "subnet_id": "subnet-0dddaeabe5400b95d"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.my_internet_gateway",
            "module.network.aws_route_table.my_public_route_table",
            "module.network.aws_subnet.my_public_subnet",
            "module.network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061219285921:subnet/subnet-0b741dcb5dd71765e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b741dcb5dd71765e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061219285921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "my-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-060a5696cbf33b243"
          },
          "dependencies": [
            "module.network.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061219285921:subnet/subnet-001964dc7cfba3c40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001964dc7cfba3c40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061219285921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "my-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-060a5696cbf33b243"
          },
          "dependencies": [
            "module.network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061219285921:subnet/subnet-001344a47e0e6fd75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001344a47e0e6fd75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061219285921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-060a5696cbf33b243"
          },
          "dependencies": [
            "module.network.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061219285921:subnet/subnet-0dddaeabe5400b95d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dddaeabe5400b95d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061219285921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-060a5696cbf33b243"
          },
          "dependencies": [
            "module.network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061219285921:vpc/vpc-060a5696cbf33b243",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f9fb7cb10e888fc2",
            "default_route_table_id": "rtb-083837d487524ee27",
            "default_security_group_id": "sg-0d92c1d6bb3171b4c",
            "dhcp_options_id": "dopt-06be53f17cf07a6e5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-060a5696cbf33b243",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-083837d487524ee27",
            "owner_id": "061219285921",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061219285921:security-group/sg-05591fb29f5d57fce",
            "description": "Inbound and outbound rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05591fb29f5d57fce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "my-security-group",
            "name_prefix": "",
            "owner_id": "061219285921",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-security-group"
            },
            "tags_all": {
              "Name": "my-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-060a5696cbf33b243"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee8b13ae65ae65a3",
            "arn": "arn:aws:ec2:us-east-1:061219285921:instance/i-0cfb2ad08965f1889",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfb2ad08965f1889",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0124f5e4361a78c25",
            "private_dns": "ip-10-0-1-94.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.94",
            "public_dns": "ec2-3-238-76-233.compute-1.amazonaws.com",
            "public_ip": "3.238.76.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0773a118c307bf5ed",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-05591fb29f5d57fce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001344a47e0e6fd75",
            "tags": {
              "Name": "jenkins-controller",
              "environment": "prod",
              "role": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins-controller",
              "environment": "prod",
              "role": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05591fb29f5d57fce"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.my_public_subnet",
            "module.network.aws_vpc.my_vpc",
            "module.security.aws_security_group.my_security_group",
            "module.server.data.aws_ami.ubuntu"
          ]
        }
      ]
    }
  ]
}